--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,12 +1,12 @@
 *,
 *::after,
 *::before {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-	height: 100%;
-	background: url(../img/site-bg.jpg) no-repeat center center fixed; 
+  height: 100%;
+  background: url(../img/site-bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -14,84 +14,99 @@ html {
 }
 
 body {
-	font-family: 'Helvetica', 'Arial', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	margin: 0;
-	padding: 0;
-	height: 100%;
+  font-family: "Helvetica", "Arial", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
-
 .page-wrapper {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
 }
 
 header {
-	width: 100%;
+  width: 100%;
+  background: white;
 }
 
 nav {
-	padding: 2rem 1rem 1rem;
-	background: white;
+  padding: 2rem 1rem 1rem;
+  max-width: 63rem;
+  margin: 0 auto;
 }
 
 nav ul {
-	height: 3rem;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  height: 3rem;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav ul li a {
-	text-decoration-color: transparent;
-	color: dimgray;
+  text-decoration-color: transparent;
+  color: dimgray;
 }
 
 nav ul li a:hover {
-	text-decoration-color: #EA215A;
+  text-decoration-color: #ea215a;
   text-decoration-thickness: 0.125em;
   text-underline-offset: 0.75rem;
 }
 
 img.logo-main {
-	width: 100%;
-	max-width: 800px;
+  width: 100%;
+  max-width: 800px;
+}
+
+.content-title {
+  font-size: 3.125rem;
 }
 
 .content-grid {
-	display: grid;
-	grid-template-columns: 2fr 1fr;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  max-width: 71.1875rem;
+  grid-column-gap: 3.75rem;
 }
 
 .content-columns {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 3.75rem;
 }
 
 .content-lead {
-	font-size: 24px;
-	margin-top: 0;
+  font-size: 1.6875rem;
+  line-height: 2.6875rem;
+  margin-top: 0;
+}
+
+.content-columns p {
+  font-size: 0.9375rem;
+  line-height: 1.5625rem;
 }
 
 footer {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  min-height: 16rem;
 }
 
 footer img {
-	width: 100%;
-	max-width: 100px;
+  width: 100%;
+  max-width: 100px;
 }
 
 footer > div {
-	display: flex;
-	column-gap: 1rem;
+  display: flex;
+  column-gap: 1rem;
 }
