Added mobile navigation

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -34,13 +34,13 @@ header {
   background: white;
 }
 
-nav {
+#desktop-menu {
   padding: 2rem 0 1rem;
   max-width: 71.1875rem;
   margin: 0 auto;
 }
 
-nav ul {
+#desktop-menu ul {
   height: 3rem;
   list-style: none;
   margin: 0;
@@ -50,15 +50,28 @@ nav ul {
   align-items: center;
 }
 
-nav ul li a {
+#desktop-menu ul li a {
   text-decoration-color: transparent;
-  color: dimgray;
+  color: black;
 }
 
-nav ul li a:hover {
+#desktop-menu ul li a:hover {
   text-decoration-color: #ea215a;
   text-decoration-thickness: 0.125em;
   text-underline-offset: 0.75rem;
+}
+
+#menu-button {
+  display: none;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  align-items: center;
+}
+#menu-button img {
+  display: block;
 }
 
 img.logo-main {
@@ -128,10 +141,10 @@ footer > div {
     display: block;
   }
 
-  .content-wrapper, footer {
+  #content-wrapper, footer, img.logo-main {
     padding: 0 2rem;
   }
-  nav {
+  #desktop-menu {
     padding: 2rem 2rem 1rem;
   }
 
@@ -140,16 +153,54 @@ footer > div {
     margin-right: auto;
   }
 
-  .content-wrapper img {
+  #content-wrapper img {
     margin: 2rem auto 2rem;
     max-width: 12.5rem;
     display: block;
   }
 }
 
+header.showMenu {
+  height: 100vh;
+  position: absolute;
+  flex-direction: column;
+}
+
+header.showMenu #desktop-menu {
+  display: flex;
+  justify-content: end;
+  padding: 0 2rem;
+}
+
+.hide {
+  display: none !important;
+}
+
 @media screen and (max-width: 799px) {
-  nav {
-    /* display: none; */
+
+  header {
+    display: flex;
+    justify-content: end;
+    padding: 0 2rem;
+  }
+
+  #desktop-menu {
+    display: none;
+    justify-content: end;
+    height: calc(100vh - 3rem)
+  }
+
+  #desktop-menu ul {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 4rem;
+  }
+
+  #menu-button {
+    height: 3rem;
+    display: inline-flex;
+    padding-left: calc(100% - 1.5rem);
   }
 }
 
