--- a/src/css/base.css
+++ b/src/css/base.css
@@ -91,6 +91,13 @@ img.logo-main {
   grid-column-gap: 3.75rem;
 }
 
+.content-grid.contact {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  max-width: 71.1875rem;
+  grid-column-gap: 3.75rem;
+}
+
 .content-columns {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -135,20 +142,90 @@ footer > div {
   width: 17rem;
 }
 
+#contact-form {
+  background: #fff;
+  padding: 4rem 5rem;
+  border-radius: 0.75rem;
+}
+
+label span, .label-span {
+  display: block;
+  margin-bottom: 1rem;
+  font-size: 12px;
+}
+
+input {
+  display: block;
+  width: 100%;
+  border: none;
+  border-bottom: solid 1px #666;
+  box-shadow: none;
+  font-size: 1rem;
+  line-height: 1.875rem;
+  margin-bottom: 3rem;
+}
+
+input:focus, textarea:focus {
+  outline: none;
+}
+
+textarea {
+  width: 100%;
+  border-radius: 0;
+  border: none;
+  border-bottom: solid 1px #666;
+  resize: none;
+  min-height: 5rem;
+  padding-right: 5rem;
+}
+
+.multifield {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1rem;
+}
+
+#message-field {
+  position: relative;
+}
+
+/* #message-field text */
+
+#btn-submit {
+  position: absolute;
+  bottom: 1rem;
+  right: 0;
+  background: black;
+  color: white;
+  border: none;
+  padding: 0.4rem 1.5rem;
+  border-radius: 0.25rem;
+  font-size: 0.75rem;
+}
 
 @media screen and (max-width: 1279px) {
-  .page-wrapper, .content-grid, .content-columns {
+  .page-wrapper,
+  .content-grid,
+  .content-columns {
     display: block;
   }
 
-  #content-wrapper, footer, img.logo-main {
+  #content-wrapper {
+    margin-bottom: 5rem;
+  }
+
+  #content-wrapper,
+  footer,
+  img.logo-main {
     padding: 0 2rem;
   }
   #desktop-menu {
     padding: 2rem 2rem 1rem;
   }
 
-  .content-grid, .content-title, .page-wrapper {
+  .content-grid,
+  .content-title,
+  .page-wrapper {
     margin-left: auto;
     margin-right: auto;
   }
@@ -157,6 +234,14 @@ footer > div {
     margin: 2rem auto 2rem;
     max-width: 12.5rem;
     display: block;
+  }
+
+  .content-grid.contact {
+    display: block;
+  }
+
+  form {
+    margin-top: 4rem;
   }
 }
 
@@ -177,7 +262,6 @@ header.showMenu #desktop-menu {
 }
 
 @media screen and (max-width: 799px) {
-
   header {
     display: flex;
     justify-content: end;
@@ -187,7 +271,7 @@ header.showMenu #desktop-menu {
   #desktop-menu {
     display: none;
     justify-content: end;
-    height: calc(100vh - 3rem)
+    height: calc(100vh - 3rem);
   }
 
   #desktop-menu ul {
@@ -202,14 +286,34 @@ header.showMenu #desktop-menu {
     display: inline-flex;
     padding-left: calc(100% - 1.5rem);
   }
+
+  #chas-logo {
+    width: 4.75rem;
+  }
+
+  #construction-logo {
+    width: 6.625rem;
+  }
+
+  #gallant-logo {
+    width: 8rem;
+  }
 }
 
 @media screen and (max-height: 880px) {
-  .page-wrapper, .content-grid, .content-columns {
+  .page-wrapper,
+  .content-grid,
+  .content-columns {
     display: block;
   }
 
-  .content-grid, .content-title, .page-wrapper {
+  #content-wrapper {
+    margin-bottom: 5rem;
+  }
+
+  .content-grid,
+  .content-title,
+  .page-wrapper {
     margin-left: auto;
     margin-right: auto;
   }
