--- a/src/css/base.css
+++ b/src/css/base.css
@@ -177,6 +177,8 @@ textarea {
   resize: none;
   min-height: 5rem;
   padding-right: 5rem;
+  font-size: 1rem;
+  font-family: inherit;
 }
 
 .multifield {
@@ -201,6 +203,7 @@ textarea {
   padding: 0.4rem 1.5rem;
   border-radius: 0.25rem;
   font-size: 0.75rem;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1279px) {
